Added osc::ComponentAnnotations class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -348,6 +348,8 @@ add_library(osccore STATIC
 
     src/OpenSimBindings/BasicModelStatePair.cpp
     src/OpenSimBindings/BasicModelStatePair.hpp
+    src/OpenSimBindings/ComponentAnnotations.cpp
+    src/OpenSimBindings/ComponentAnnotations.hpp
     src/OpenSimBindings/ComponentDecoration.cpp
     src/OpenSimBindings/ComponentDecoration.hpp
     src/OpenSimBindings/ComponentOutputExtractor.cpp
