Implementing simulator tab

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,6 +481,8 @@ add_library(osccore STATIC
     src/Tabs/MeshImporterTab.hpp
     src/Tabs/ModelEditorTab.cpp
     src/Tabs/ModelEditorTab.hpp
+    src/Tabs/SimulatorTab.cpp
+    src/Tabs/SimulatorTab.hpp
     src/Tabs/SplashTab.cpp
     src/Tabs/SplashTab.hpp
     src/Tabs/Tab.cpp
