Added repro for opensim-org/opensim-core issue #3211

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -612,8 +612,9 @@ target_link_options(osccore PUBLIC
 # osctests: main exe that links to `osccore` and exercises APIs etc.
 add_executable(testosc EXCLUDE_FROM_ALL
 
-    tests/TestOsc.cpp
     tests/TestDedupedString.cpp
+    tests/TestOpenSim.cpp
+    tests/TestOsc.cpp
     tests/TestRenderer.cpp
     tests/TestRendererHelloTriangleScreen.cpp
 )
