Refactored printing param values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,6 +387,7 @@ add_library(osccore STATIC
     src/OpenSimBindings/OutputExtractor.hpp
     src/OpenSimBindings/ParamBlock.hpp
     src/OpenSimBindings/ParamBlock.cpp
+    src/OpenSimBindings/ParamValue.hpp
     src/OpenSimBindings/Simulation.hpp
     src/OpenSimBindings/SimulationClock.hpp
     src/OpenSimBindings/SimulationModelStatePair.cpp
