Copied simulator plotting code into separate SimulationOutputPlot class (related: #241)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -348,6 +348,9 @@ add_library(osccore STATIC
     src/Maths/Transform.cpp
     src/Maths/Transform.hpp
 
+    src/MiddlewareAPIs/MainUIStateAPI.hpp
+    src/MiddlewareAPIs/SimulatorUIAPI.hpp
+
     src/OpenSimBindings/AutoFinalizingModelStatePair.cpp
     src/OpenSimBindings/AutoFinalizingModelStatePair.hpp
     src/OpenSimBindings/BasicModelStatePair.cpp
@@ -544,12 +547,12 @@ add_library(osccore STATIC
     src/Widgets/SelectComponentPopup.hpp
     src/Widgets/SelectGeometryPopup.cpp
     src/Widgets/SelectGeometryPopup.hpp
+    src/Widgets/SimulationOutputPlot.cpp
+    src/Widgets/SimulationOutputPlot.hpp
     src/Widgets/StandardPopup.cpp
     src/Widgets/StandardPopup.hpp
     src/Widgets/UiModelViewer.cpp
     src/Widgets/UiModelViewer.hpp
-
-    src/MainUIStateAPI.hpp
 )
 
 # osccore: target properties
