Ensured panel locations are sane for 0.2.0 (closes #229)

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=1920,1118
+Pos=0,48
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=610,318
+Pos=610,302
 Size=700,500
 Collapsed=0
 
@@ -19,16 +19,16 @@ Size=682,67
 Collapsed=0
 
 [Window][render]
-Pos=364,0
-Size=1157,983
+Pos=355,48
+Size=738,782
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
-Pos=0,19
-Size=353,599
+Pos=0,48
+Size=284,549
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x0000001B,0
 
 [Window][Muscles]
 Pos=1523,19
@@ -37,8 +37,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Outputs]
-Pos=1548,19
-Size=372,633
+Pos=1548,48
+Size=372,1009
 Collapsed=0
 DockId=0x00000011,0
 
@@ -102,8 +102,8 @@ Collapsed=0
 DockId=0x0000000B,1
 
 [Window][Actions]
-Pos=355,888
-Size=1565,30
+Pos=355,832
+Size=1565,27
 Collapsed=0
 DockId=0x00000008,0
 
@@ -214,14 +214,14 @@ Size=512,375
 Collapsed=0
 
 [Window][viewer0]
-Pos=355,19
-Size=1565,867
+Pos=286,48
+Size=1260,811
 Collapsed=0
 DockId=0x00000004
 
 [Window][Log]
-Pos=355,920
-Size=1565,217
+Pos=286,861
+Size=1260,196
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -231,8 +231,8 @@ Size=512,787
 Collapsed=0
 
 [Window][viewer1]
-Pos=931,19
-Size=615,459
+Pos=1095,48
+Size=825,782
 Collapsed=0
 DockId=0x00000006
 
@@ -261,8 +261,8 @@ Collapsed=0
 DockId=0x00000011,1
 
 [Window][Loading Message]
-Pos=673,312
-Size=512,52
+Pos=704,248
+Size=512,58
 Collapsed=0
 
 [Window][select experiment]
@@ -297,38 +297,87 @@ Size=144,144
 Collapsed=0
 
 [Window][Coordinate Editor]
-Pos=0,19
-Size=353,599
+Pos=0,48
+Size=353,537
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000001B,1
 
 [Window][hierarchy]
-Pos=0,19
-Size=322,1118
+Pos=0,48
+Size=322,523
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000016,0
 
 [Window][wizard_3dViewer]
-Pos=324,19
-Size=1596,1118
+Pos=324,48
+Size=1596,811
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][history]
+Pos=0,573
+Size=322,484
+Collapsed=0
+DockId=0x00000018,0
+
+[Window][Save Changes?]
+Pos=704,464
+Size=512,128
+Collapsed=0
+
+[Window][Property Editor]
+Pos=0,587
+Size=353,470
+Collapsed=0
+DockId=0x0000001A,0
+
+[Window][MusclePlot_1]
+Pos=363,179
+Size=460,438
+Collapsed=0
+
+[Window][MusclePlot_2]
+Pos=954,168
+Size=458,370
+Collapsed=0
+
+[Window][MusclePlot_3]
+Pos=60,60
+Size=426,405
+Collapsed=0
+
+[Window][MusclePlot_4]
+Pos=60,60
+Size=453,431
+Collapsed=0
+
+[Window][Selection Details]
+Pos=0,599
+Size=284,458
+Collapsed=0
+DockId=0x0000001C,0
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1118 Split=X Selected=0x945C996A
-  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=322,1118 Selected=0xFA7A28AE
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,48 Size=1920,1009 Split=X Selected=0x945C996A
+  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=322,1118 Split=Y Selected=0xFA7A28AE
+    DockNode                ID=0x00000016 Parent=0x00000015 SizeRef=322,523 Selected=0xFA7A28AE
+    DockNode                ID=0x00000018 Parent=0x00000015 SizeRef=322,484 Selected=0x27BA704B
   DockNode                  ID=0x00000017 Parent=0x8B93E3BD SizeRef=1596,1118 Split=X
     DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
     DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
       DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
         DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=353,1117 Split=Y Selected=0x788BAA0D
-          DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Selected=0x788BAA0D
+          DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+            DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+              DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+              DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
+            DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
           DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 HiddenTabBar=1 Selected=0x16244C15
         DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1565,1117 Split=Y
           DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
             DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-              DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=624,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
-              DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=615,916 Split=Y Selected=0x98DE1660
+              DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=738,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
+              DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=825,916 Split=Y Selected=0x98DE1660
                 DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
                 DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
                   DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
@@ -336,6 +385,6 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1
             DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
           DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
       DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
-        DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0x1A64C361
+        DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0xC3C896C0
         DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
 
