--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -20,13 +20,13 @@ Collapsed=0
 
 [Window][render]
 Pos=355,48
-Size=738,782
+Size=1565,1009
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,48
-Size=284,549
+Size=323,549
 Collapsed=0
 DockId=0x0000001B,0
 
@@ -214,14 +214,14 @@ Size=512,375
 Collapsed=0
 
 [Window][viewer0]
-Pos=286,48
-Size=1260,811
+Pos=325,48
+Size=1255,1009
 Collapsed=0
 DockId=0x00000004
 
 [Window][Log]
-Pos=286,861
-Size=1260,196
+Pos=355,861
+Size=1565,196
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -304,13 +304,13 @@ DockId=0x0000001B,1
 
 [Window][hierarchy]
 Pos=0,48
-Size=322,523
+Size=322,1009
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][wizard_3dViewer]
 Pos=324,48
-Size=1596,811
+Size=1596,1009
 Collapsed=0
 DockId=0x00000004,0
 
@@ -353,38 +353,46 @@ Collapsed=0
 
 [Window][Selection Details]
 Pos=0,599
-Size=284,458
+Size=323,458
 Collapsed=0
 DockId=0x0000001C,0
 
+[Window][Output Watches]
+Pos=1582,48
+Size=338,1009
+Collapsed=0
+DockId=0x0000001E,0
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,48 Size=1920,1009 Split=X Selected=0x945C996A
-  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=322,1118 Split=Y Selected=0xFA7A28AE
-    DockNode                ID=0x00000016 Parent=0x00000015 SizeRef=322,523 Selected=0xFA7A28AE
-    DockNode                ID=0x00000018 Parent=0x00000015 SizeRef=322,484 Selected=0x27BA704B
-  DockNode                  ID=0x00000017 Parent=0x8B93E3BD SizeRef=1596,1118 Split=X
-    DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-    DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
-      DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
-        DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=353,1117 Split=Y Selected=0x788BAA0D
-          DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
-            DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
-              DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
-              DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
-            DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
-          DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 HiddenTabBar=1 Selected=0x16244C15
-        DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1565,1117 Split=Y
-          DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
-            DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-              DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=738,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
-              DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=825,916 Split=Y Selected=0x98DE1660
-                DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
-                DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                  DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
-                  DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-            DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-          DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
-      DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
-        DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0xC3C896C0
-        DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
+DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,48 Size=1920,1009 Split=X Selected=0x945C996A
+  DockNode                    ID=0x0000001D Parent=0x8B93E3BD SizeRef=1580,1009 Split=X
+    DockNode                  ID=0x00000015 Parent=0x0000001D SizeRef=322,1118 Split=Y Selected=0xFA7A28AE
+      DockNode                ID=0x00000016 Parent=0x00000015 SizeRef=322,523 Selected=0xFA7A28AE
+      DockNode                ID=0x00000018 Parent=0x00000015 SizeRef=322,484 Selected=0x27BA704B
+    DockNode                  ID=0x00000017 Parent=0x0000001D SizeRef=1596,1118 Split=X
+      DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+      DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+        DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
+          DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=323,1117 Split=Y Selected=0x788BAA0D
+            DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+              DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+                DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+                DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
+              DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
+            DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 HiddenTabBar=1 Selected=0x16244C15
+          DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1255,1117 Split=Y
+            DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
+              DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+                DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=738,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
+                DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=825,916 Split=Y Selected=0x98DE1660
+                  DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
+                  DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                    DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
+                    DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+              DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+            DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
+        DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
+          DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0xC3C896C0
+          DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
+  DockNode                    ID=0x0000001E Parent=0x8B93E3BD SizeRef=338,1009 Selected=0x6B2393A4
 
