Fixed coordinate names being easier to read (#252)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -625,6 +625,7 @@ add_executable(testosc EXCLUDE_FROM_ALL
     tests/TestOsc.cpp
     tests/TestRenderer.cpp
     tests/TestRendererHelloTriangleScreen.cpp
+    tests/TestTypeRegistry.cpp
 )
 
 # osctests: target properties
