Moved many model editing actions into their own compilation unit (#263)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,6 +261,9 @@ endif()
 add_library(osccore STATIC
     ${CMAKE_BINARY_DIR}/osc_config.hpp
 
+    src/Actions/ActionFunctions.cpp
+    src/Actions/ActionFunctions.hpp
+
     src/Bindings/GlmHelpers.cpp
     src/Bindings/GlmHelpers.hpp
     src/Bindings/ImGuiHelpers.cpp
