Added MultipleLightsTab (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,6 +473,8 @@ add_library(osccore STATIC
     src/Tabs/Experiments/RendererHelloTriangleTab.hpp
     src/Tabs/Experiments/RendererLightingMapsTab.cpp
     src/Tabs/Experiments/RendererLightingMapsTab.hpp
+    src/Tabs/Experiments/RendererMultipleLightsTab.cpp
+    src/Tabs/Experiments/RendererMultipleLightsTab.hpp
     src/Tabs/Experiments/RendererTexturingTab.cpp
     src/Tabs/Experiments/RendererTexturingTab.hpp
     src/Tabs/CookiecutterTab.cpp
