Experimental: beginning to implement motion visualizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -449,6 +449,8 @@ add_library(osccore STATIC
     src/Screens/MeshScreen.cpp
     src/Screens/MeshScreen.hpp
 
+    src/Tabs/Experiments/PreviewExperimentalDataTab.cpp
+    src/Tabs/Experiments/PreviewExperimentalDataTab.hpp
     src/Tabs/Experiments/RendererBasicLightingTab.cpp
     src/Tabs/Experiments/RendererBasicLightingTab.hpp
     src/Tabs/Experiments/RendererBlendingTab.cpp
