Added 'initial_tab' configuration option (handy for development, #264)

--- a/build_resources/DEV_osc.toml.in
+++ b/build_resources/DEV_osc.toml.in
@@ -14,6 +14,9 @@
 resources = "@CMAKE_CURRENT_SOURCE_DIR@/resources"
 docs = "@CMAKE_CURRENT_SOURCE_DIR@/docs/build"
 
+# handy for auto-opening an in-development tab
+# initial_tab = "OpenSim/PreviewExperimentalData"
+
 [experimental_feature_flags]
 
 # enable dragging panels out of the host window and into their own window
