--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,6 +463,8 @@ add_library(osccore STATIC
     src/Tabs/Experiments/RendererMultipleLightsTab.hpp
     src/Tabs/Experiments/RendererOpenSimTab.cpp
     src/Tabs/Experiments/RendererOpenSimTab.hpp
+    src/Tabs/Experiments/RendererSDFTab.cpp
+    src/Tabs/Experiments/RendererSDFTab.hpp
     src/Tabs/Experiments/RendererTexturingTab.cpp
     src/Tabs/Experiments/RendererTexturingTab.hpp
     src/Tabs/CookiecutterTab.cpp
