--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -289,6 +289,7 @@ add_library(osccore STATIC
     src/Graphics/GraphicsHelpers.cpp
     src/Graphics/GraphicsHelpers.hpp
     src/Graphics/GraphicsImplementation.cpp
+    src/Graphics/GraphicsLazyMode.hpp
     src/Graphics/Image.cpp
     src/Graphics/Image.hpp
     src/Graphics/ImageFlags.hpp
@@ -302,7 +303,6 @@ add_library(osccore STATIC
     src/Graphics/MeshGen.hpp
     src/Graphics/Mesh.hpp
     src/Graphics/MeshTopography.hpp
-    src/Graphics/Renderer.hpp
     src/Graphics/RenderTexture.hpp
     src/Graphics/RenderTextureDescriptor.hpp
     src/Graphics/RenderTextureFormat.hpp
